--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,11 @@
 .App {
+	font-family: 'Avenir', Helvetica, Arial, sans-serif;
+  background-color:  #eff2f6;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.App h1 {
+  text-align: center;
+  padding-top: 1em;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
